--- a/html/introduction-to-html/navigation-menu-start/index.html
+++ b/html/introduction-to-html/navigation-menu-start/index.html
@@ -7,8 +7,14 @@
 
   <body>
     <!-- put navigation menu just below here -->
-
-    <h1>Homepage</h1>
+    <ul>
+   <h1>Homepage</h1>
+        <li><p><a href="https://github.com/mdn/learning-area/tree/master/html/introduction-to-html/navigation-menu-start/index.html>index</a></li>
+         <li> <p> <a href="https://github.com/mdn/learning-area/tree/master/html/introduction-to-html/navigation-menu-start/projects.html>project</a></li>
+          <li> <p> <a href="https://github.com/mdn/learning-area/tree/master/html/introduction-to-html/navigation-menu-start/pictures.html>pictures</a></li>
+            <li><p> <a href="https://github.com/mdn/learning-area/tree/master/html/introduction-to-html/navigation-menu-start/social.html>social</a></li>
+          
+          </ul>
 
     <p>Welcome to my exciting homepage</p>
   </body>
